# hikari-lightbulb

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  TODO.md  __init__.py  context.py  crontrigger_requirements.txt  dev_requirements.txt  docs_requirements.txt  handler.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  qodana.yaml  release_helpers.py  release_webhook.py  requirements.txt  setup.py  test_requirements.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  fragment_check.yml  qodana.yml
dev-requirements/: docs.txt  formatting.txt  mypy.txt  pyright.txt  slotscheck.txt
docs/source/: 404.md  api-reference.rst  by-example.md  by-example.rst  changelog.md  changelog.rst  conf.py  custom-help.rst  extension-libs.rst  getting-started.rst  guide.rst  hikari-basics.rst  index.md  index.rst  quickstart.md  slash-commands.rst  utils-api-reference.rst  v0-changelog.rst  v1-changelog.rst
docs/source/_static/: theme_overrides.css
docs/source/_static/css/: theme.css
docs/source/api_references/: app.rst  buckets.rst  checks.rst  commands.rst  context.rst  converters.rst  cooldown_algorithms.rst  cooldowns.rst  decorators.rst  errors.rst  events.rst  help.rst  lightbulb.client.rst  lightbulb.commands.rst  lightbulb.context.rst  lightbulb.exceptions.rst  lightbulb.internal.rst  lightbulb.utils.rst  parser.rst  plugins.rst  utils.rst
docs/source/by-examples/: 000_preface.md  010_commands.md  020_options.md  030_context_menus.md  040_groups.md  050_dependencies.md  060_hooks.md  065_error_handling.md  070_extensions.md  080_autocomplete.md  090_localization.md  100_appendix.md
docs/source/changelogs/: v0-changelog.md  v1-changelog.md  v1-changelog.rst  v2-changelog.md  v2-changelog.rst  v3-changelog.md
docs/source/guides/: application-commands.rst  command-groups.rst  commands.rst  custom-help.rst  error-handling.rst  extensions.rst  plugins.rst
docs/source/hikari_basics/: api-requests.rst  cache.rst  components.rst  embeds.rst  intents.rst
examples/: basic_bot_example.py  basic_slash_command_bot_example.py  component_menu_example.py  extension_example.py  in_depth_component_example.py  moderation_example.py  plugin_example.py
fragments/: +assertion.bugfix.md  +better_exceptions.removed.md  +by_example.doc.md  +cd_dep.bugfix.md  +cd_remaining.bugfix.md  +choice_localization.feature.md  +client_in_contexts.feature.md  +command_attrs.feature.md  +command_resolution.bugfix.md  +components_attr_error.bugfix.md  +confspec.misc.md  +cooldown_manipulation.feature.md  +default_di_context.bugfix.md  +defer.removal.md  +deferred_localization.bugfix.md  +deferred_registration.removed.md  +dep_vers.misc.md  +di_container.bugfix.md  +di_failure.bugfix.md  +enable_disable_components.feature.md  +ephemeral_kwarg.feature.md  +errors.feature.md  +exts.feature.md  +feature_flags.feature.md  +group_command_data.feature.md  +hkver.misc.md  +hook_name.feature.md  +intellij_plugin.feature.md  +leaks.bugfix.md  +loadable_multi_listen.feature.md  +loader_error_handler.bugfix.md  +localization.bugfix.md  +localized_autocomplete.bugfix.md  +localized_subcommands.bugfix.md  +menu_handle.feature.md  +menu_logging.bugfix.md  +menu_timeout.breaking.md  +permit_admin.feature.md  +polls.feature.md  +pre_invoke.feature.md  (+50 more)
handler/: __init__.py  checks.py  command_handler.py  commands.py  context.py  errors.py  handler.py  stringview.py
lightbulb/: __init__.py  __main__.py  app.py  buckets.py  checks.py  client.py  command_handler.py  commands.py  config.py  context.py  converters.py  cooldown_algorithms.py  cooldowns.py  decorators.py  di.py  errors.py  events.py  exceptions.py  features.py  help.py  help_command.py  internal.py  loaders.py  localization.py  metaparams.json  parser.py  plugins.py  stringview.py  tasks.py  templates.py  utils.py
lightbulb/commands/: __init__.py  base.py  commands.py  execution.py  groups.py  hooks.py  message.py  options.py  prefix.py  slash.py  user.py  utils.py
lightbulb/components/: __init__.py  base.py  menus.py  modals.py  utils.py
lightbulb/context/: __init__.py  base.py  message.py  prefix.py  slash.py  user.py
lightbulb/converters/: __init__.py  base.py  special.py
lightbulb/di/: __init__.py  conditions.py  container.py  exceptions.py  graph.py  registry.py  solver.py  utils.py
lightbulb/ext/tasks/: __init__.py  triggers.py
lightbulb/internal/: __init__.py  constants.py  di.py  marker.py  sync.py  types.py  utils.py
lightbulb/lightbulb template/: main.py
lightbulb/lightbulb template/extensions/: commands.py
lightbulb/localization/: __init__.py  localization.py
lightbulb/prefab/: __init__.py  checks.py  concurrency.py  cooldowns.py
lightbulb/slash_commands/: __init__.py  commands.py  context.py
lightbulb/templates/tutorial/: main.py
lightbulb/utils/: __init__.py  aio.py  data_store.py  nav.py  pag.py  parser.py  permissions.py  search.py
lightbulb_v2/: __init__.py  app.py  checks.py  decorators.py  errors.py  events.py  plugins.py
lightbulb_v2/commands/: __init__.py  base.py  message.py  prefix.py  slash.py  user.py
lightbulb_v2/context/: __init__.py  base.py  message.py  prefix.py  slash.py  user.py
lightbulb_v2/converters/: __init__.py  base.py  special.py
lightbulb_v2/utils/: __init__.py  data_store.py  parser.py
scripts/deploy/: populate_changelog.py  update_version.py
scripts/docs/: api_reference_generator.py
tests/: test_checks.py  test_command_handler.py  test_commands.py  test_config.py  test_context.py  test_converters.py  test_stringview.py  test_utils.py
tests/di/: test_container.py  test_graph.py  test_registry.py  test_solver.py
tests/prefab/: test_checks.py  test_concurrency.py  test_cooldowns.py
